# echotune-minimp3-rs-fixed

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/: example.rs  example_seeking.rs
minimp3-sys/: Cargo.toml  README.md  bindings.rs  build.rs  minimp3.c  wrapper.h
minimp3-sys/src/: bindings.rs  lib.rs
src/: error.rs  lib.rs
tests/: seeking.rs
